kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bc98ms.bootcamp64.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: mockserver-service
           port:
             number: 3000
  - host: bc98fe.bootcamp64.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: frontend-service
           port:
             number: 80
